# latepredictor_backend

./: pyproject.toml
notebook/: fastapi_endpoint_test.ipynb
src/: config.py
src/etl_googlesheet/pipelines/: load.py
src/fastapi_app/: main.py
src/fastapi_app/core/: fastapi_builder.py  request_schema.py  startup.py
src/fastapi_app/models/: automodels.py  feature_registry.json  models.py
src/fastapi_app/pipelines/: data_feedback.py  model_registry.py  predict.py  preprocess.py  train.py
src/fastapi_app/services/: data_feedback.py  feature_registry.py  local_feature_registry.py  ml_service.py
src/feature_engineering/: main.py
src/feature_engineering/pipelines/: extract.py  load.py
src/utils/: cat_encoding.py  logger.py  supabase_client.py  supabase_utils.py
