[project]
name = "late-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fastparquet>=2026.3.0",
    "gspread>=6.2.1",
    "haversine>=2.9.0",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "joblib>=1.5.3",
    "oauth2client>=4.1.3",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
]
